--- a/NoteMe/Resource/en.lproj/Localizable.strings
+++ b/NoteMe/Resource/en.lproj/Localizable.strings
@@ -5,15 +5,22 @@
   Created by Vadim on 5.11.23.
   
 */
+    //MARK: - Auth screens
+//Labels
 "welcome_label" = "Welcome back!";
 "nice_to_meet_you_label" = "Nice to meet you!";
 "reset_password_label" = "Reset Password";
 "e-mail_label" = "E-mail";
-"e-mail_textField_placeholder" = "Enter E-mail";
 "password_label" = "Password";
-"password_textField_placeholder" = "Enter Password";
 "repeat_password_label" = "Repeat Password";
+"reset_infolabel" = "Enter your email address and we will share a link to create a new password.";
+
+//Placeholders
+"e-mail_textField_placeholder" = "Enter E-mail";
+"password_textField_placeholder" = "Enter Password";
 "repeat_password_textField_placeholder" = "Enter Password";
+
+//Buttons
 "forgot_password_button" = "Forgot Password";
 "login_button" = "Login";
 "register_button" = "Register";
@@ -21,6 +28,3 @@
 "have_account_button" = "I have an Account";
 "reset_button" = "Reset";
 "cancel_button" = "Cancel";
-"reset_infolabel" = "Enter your email address and we will share a link to
-create a new password.";
-
