--- a/NoteMe/Resource/ru.lproj/Localizable.strings
+++ b/NoteMe/Resource/ru.lproj/Localizable.strings
@@ -5,26 +5,38 @@
   Created by Vadim on 5.11.23.
   
 */
-    //MARK: - Auth screens
-//Labels
-"welcome_label" = "Добро пожаловать!";
-"nice_to_meet_you_label"= "Введите данные регистрации";
-"reset_password_label" = "Восстановление Пароля";
-"e-mail_label" = "Электронная почта";
-"password_label" = "Пароль";
-"repeat_password_label" = "Повторите пароль";
-"reset_infolabel" = "Введите адрес электронной почты чтобы получить ссылку для создания нового пароля.";
+"cancel_button" = "Отмена";
 
-//Placeholders
-"e-mail_textField_placeholder" = "Введите электронную почту";
-"password_textField_placeholder" = "Введите пароль";
-"repeat_password_textField_placeholder" = "Повторите пароль";
+    //MARK: - Auth group
+//LoginVC
+"auth_title_label" =  "Добро пожаловать!";
+"auth_e-mail_label" = "Электронная почта";
+"auth_e-mail_textField_placeholder" = "Введите электронную почту";
+"auth_password_label" = "Пароль";
+"auth_password_textField_placeholder" = "Введите пароль";
+"auth_forgot_password_button" = "Восстановить Доступ";
+"auth_login_button" = "Войти";
+"auth_new_account_button" = "Новый Аккаунт";
+"auth_wrong_e-mail" = "Неверная электронная почта";
+"auth_wrong_password" = "Недействительный пароль";
 
-//Buttons
-"forgot_password_button" = "Восстановить Доступ";
-"login_button" = "Войти";
-"register_button" = "Регистрация";
-"new_account_button" = "Новый Аккаунт";
-"have_account_button" = "У меня уже есть Аккаунт";
-"reset_button" = "Сброс";
-"cancel_button" = "Назад";
+//RegisterVC
+"reg_title_label" = "Введите данные регистрации";
+"reg_e-mail_label" = "Электронная почта";
+"reg_e-mail_textField_placeholder" = "Введите электронную почту";
+"reg_password_label" = "Пароль";
+"reg_password_textField_placeholder" = "Введите пароль";
+"reg_repeat_password_label" = "Повторите пароль";
+"reg_repeat_password_textField_placeholder" = "Повторите пароль";
+"reg_register_button" = "Регистрация";
+"reg_have_account_button" = "У меня уже есть Аккаунт";
+
+//ResetPasswordVC
+"res_title_label" = "Восстановление Пароля";
+"res_infolabel" = "Введите адрес электронной почты чтобы получить ссылку для создания нового пароля.";
+"res_e-mail_textField_placeholder" = "Введите электронную почту";
+"res_reset_button" = "Сброс";
+
+
+
+
