--- a/NoteMe/Resource/ru.lproj/Localizable.strings
+++ b/NoteMe/Resource/ru.lproj/Localizable.strings
@@ -36,7 +36,7 @@
 "res_infolabel" = "Введите адрес электронной почты чтобы получить ссылку для создания нового пароля.";
 "res_e-mail_textField_placeholder" = "Введите электронную почту";
 "res_reset_button" = "Сброс";
-
+"res_wrong_e-mail" = "Неверная электронная почта";
 
 
 
