--- a/NoteMe/Resource/en.lproj/Localizable.strings
+++ b/NoteMe/Resource/en.lproj/Localizable.strings
@@ -40,3 +40,22 @@
 "res_e-mail_textField_placeholder" = "Enter E-mail";
 "res_reset_button" = "Reset";
 "res_wrong_e-mail" = "Wrong e-mail";
+
+    //MARK: - Onboard group
+//OnboardFirstStepVC
+"onboard_next_button" = "Next";
+"onboard_first_title_label" = "Welcome!";
+"onboard_first_infolabel" = "NoteMe is an application, which notify you about everything!";
+
+//OnboardSecondStepVC
+"onboard_done_button" = "Done";
+"onboard_second_title_label" = "Different types!";
+"onboard_second_calendar_label" = "Calendar";
+"onboard_second_location_label" = "Location";
+"onboard_second_timer_label" = "Timer";
+
+"onboard_second_infolabel" = "You can use 3 types of notifications
+- Calendar - choose the date, when you want to receive notification.
+- Location - choose the region and notification will come after you enter it.
+- Timer - set timer and after selected period you will receive the notification.";
+
