--- a/NoteMe/Resource/ru.lproj/Localizable.strings
+++ b/NoteMe/Resource/ru.lproj/Localizable.strings
@@ -55,6 +55,6 @@
 "onboard_second_timer_label" = "Таймер";
 
 "onboard_second_infolabel" = "Вы можете использовать 3 типа напоминаний
-- Календарь - выберите дату, когда вы хотите получить напоминание.
-- Положение - выберите область на карте и вы получите напоминание как только окажетесь в ней.
-- Таймер - установите таймер и через указанный промежуток времени вы получите напоминание.";
+• Календарь - выберите дату, когда вы хотите получить напоминание.
+• Положение - выберите область на карте и вы получите напоминание как только окажетесь в ней.
+• Таймер - установите таймер и через указанный промежуток времени вы получите напоминание.";
