--- a/NoteMe/Resource/ru.lproj/Localizable.strings
+++ b/NoteMe/Resource/ru.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Vadim on 5.11.23.
   
 */
-"cancel_button" = "Отмена";
+"cancel_button" = "Назад";
 
     //MARK: - Auth group
 //LoginVC
@@ -39,8 +39,11 @@
 "res_title_label" = "Восстановление Пароля";
 "res_infolabel" = "Введите адрес электронной почты чтобы получить ссылку для создания нового пароля.";
 "res_e-mail_textField_placeholder" = "Введите электронную почту";
-"res_reset_button" = "Сброс";
+"res_reset_button" = "Восстановить";
 "res_wrong_e-mail" = "Неверная электронная почта";
+"res_alert_title" = "Готово!";
+"res_alert_message" = "Письмо с дальнейшими инструкциями отправлено вам на почту.";
+"res_alert_okTitle" = "Хорошо";
 
     //MARK: - Onboard group
 //OnboardFirstStepVC
@@ -59,3 +62,8 @@
 • Календарь - выберите дату, когда вы хотите получить напоминание.
 • Положение - выберите область на карте и вы получите напоминание как только окажетесь в ней.
 • Таймер - установите таймер и через указанный промежуток времени вы получите напоминание.";
+
+    //MARK: - Main group
+//TabBar
+"home_item" = "Главная";
+"profile_item" = "Профиль";
