Html AttrString bold text corrected

--- a/NoteMe/Resource/ru.lproj/Localizable.strings
+++ b/NoteMe/Resource/ru.lproj/Localizable.strings
@@ -58,10 +58,7 @@
 "onboard_second_location_label" = "Положение";
 "onboard_second_timer_label" = "Таймер";
 
-"onboard_second_infolabel" = "Вы можете использовать 3 типа напоминаний
-• Календарь - выберите дату, когда вы хотите получить напоминание.
-• Положение - выберите область на карте и вы получите напоминание как только окажетесь в ней.
-• Таймер - установите таймер и через указанный промежуток времени вы получите напоминание.";
+"onboard_second_infolabel" = "Вы можете использовать 3 типа напоминаний<br><b>• Календарь</b> - выберите дату, когда вы хотите получить напоминание.<br><b>• Положение</b> - выберите область на карте и вы получите напоминание как только окажетесь в ней.<br><b>• Таймер</b> - установите таймер и через указанный промежуток времени вы получите напоминание.";
 
     //MARK: - Main group
 //TabBar
